src/objects/Comment__c.object
<CustomObject>
    <fields>
        <fullName>BlogEntry__c</fullName>
        <label>Parent Blog Entry</label>
        <referenceTo>BlogEntry__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bookmark__c</fullName>
        <label>Parent Bookmark</label>
        <referenceTo>Bookmark__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>ParentBookmark</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentComment__c</fullName>
        <label>Parent Comment</label>
        <referenceTo>Comment__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentWikiPage__c</fullName>
        <label>Parent Wiki Page</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedBy__c</fullName>
        <label>PostedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <label>PostedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Comment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>